[project]
name = "kaggle_tools"
version = "0.0.1"
authors = [
  { name="Florian Teich", email="florianteich@gmail.com" },
]
description = "A small package to manage some kaggle notebook steps"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FlorianTeich/kaggle_tools"
Issues = "https://github.com/FlorianTeich/kaggle_tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"